# mhd-xu-auditor

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: example_omega_only.npy  example_snapshot.npz
docs/: technical_notes.md  technical_notes.tex
src/mhd_xu_auditor/: __init__.py  cli.py  filters.py  io.py  metrics.py  pipeline.py  rendering.py  spectra.py  xu_convolution.py
tests/: conftest.py  test_algebraic_consistency.py  test_io_roundtrip.py
